Trunk: Merged /GMAO/rtodling/LongWindow4Dvar branch at r41415 to the trunk.  This merge corrects issues related to the long-window 4dvar option, as well as adding the ability to handle correlated radiance observation errors.  Further, Two emergency fixes, in compute_derived.f90 and update_guess.f90, have been added.
 * fix:
   * anavinfo_rtma_gust_vis_7vars - Lined up level entry 1 for ps in anavinfo file. 
   * global_convinfo.txt - Turned off OSCAT data.
   * new_rtma_parmcard_input - Updated this file to include ngrps_gustob and ngrps_visob. 

 * src:
   * compute_derived.f90 - Moved init_vars_ and final_vars_ calls out of if (.not. twodvar_regional) statement. Placed final_vars_ call in such a way so that the specific humidity is calculated.
   * update_guess.f90 - Removed if (twodvar_regional) statement, these fields are already being processed in the 2d variables section. We don't want to update these fields twice. Also, corrected logic usage so that both TSEN and TV are updated. The variable idq is the return code used for the call to gsi_bundlegetpointer for ges_q. If this is completed successfully, then idq should equal 0. However, to update TV and TSEN, there is logic - if (idq>0) - which will never occur. Also, replaced i,j, and k indices with : for ges_tsen. Finally, added logic for RTMA to the 2d variable section. 
   * Makefile - add correlated_obsmod.F90
   * correlated_obsmod.F90 - preliminary code handling correlated observations
   * lanczos.F90 - format change
   * makefile_DTC - add correlated_obsmod.F90
   * obs_para.f90 - long-window fix
   * obsmod.F90 - long-window fix
   * radinfo.f90 - support for correlated error
   * read_NASA_LaRC.f90 - long-window fix
   * read_RadarRef_mosaic.f90- long-window fix
   * read_aerosol.f90 - long-window fix
   * read_anowbufr.f90 - long-window fix
   * read_atms.f90 - long-window fix
   * read_avhrr.f90 - long-window fix
   * read_avhrr_navy.f90 - long-window fix
   * read_bufrtovs.f90 - long-window fix
   

--- a/Makefile.dependency
+++ b/Makefile.dependency
@@ -49,6 +49,7 @@ control_vectors.o : control_vectors.f90 m_stats.o mpeu_util.o gsi_bundlemod.o m_
 converr.o : converr.f90 obsmod.o constants.o kinds.o 
 convinfo.o : convinfo.f90 gsi_chemguess_mod.o mpimod.o gridmod.o obsmod.o constants.o kinds.o 
 convthin.o : convthin.f90 satthin.o constants.o kinds.o 
+correlated_obsmod.o : correlated_obsmod.F90 mpeu_util.o timermod.o mpimod.o constants.o kinds.o
 crtm_interface.o : crtm_interface.f90 obsmod.o set_crtm_cloudmod.o set_crtm_aerosolmod.o ncepgfs_ghg.o cloud_efr_mod.o mpimod.o constants.o control_vectors.o guess_grids.o aeroinfo.o radinfo.o gsi_metguess_mod.o gsi_chemguess_mod.o gsi_bundlemod.o mpeu_util.o gridmod.o kinds.o 
 cvsection.o : cvsection.f90 control_vectors.o jfunc.o gridmod.o mpimod.o kinds.o 
 cwhydromod.o : cwhydromod.f90 gsi_bundlemod.o derivsmod.o guess_grids.o gridmod.o constants.o kinds.o 
@@ -232,7 +233,7 @@ psichi2uvt_reg.o : psichi2uvt_reg.f90 gridmod.o constants.o kinds.o
 qcmod.o : qcmod.f90 gsi_metguess_mod.o mpeu_util.o control_vectors.o gridmod.o radinfo.o obsmod.o constants.o kinds.o 
 q_diag.o : q_diag.f90 mpeu_util.o gsi_bundlemod.o gsi_metguess_mod.o general_commvars_mod.o derivsmod.o gridmod.o constants.o mpimod.o jfunc.o guess_grids.o kinds.o 
 qnewton3.o : qnewton3.f90 timermod.o jfunc.o qcmod.o control_vectors.o mpimod.o constants.o kinds.o 
-radinfo.o : radinfo.f90 mpeu_util.o obsmod.o gridmod.o gsi_chemguess_mod.o gsi_metguess_mod.o mpimod.o constants.o read_diag.o kinds.o 
+radinfo.o : radinfo.f90 mpeu_util.o obsmod.o gridmod.o gsi_chemguess_mod.o gsi_metguess_mod.o mpimod.o constants.o read_diag.o kinds.o correlated_obsmod.o 
 raflib.o : raflib.f90 plib8.o constants.o mpimod.o kinds.o 
 rapidrefresh_cldsurf_mod.o : rapidrefresh_cldsurf_mod.f90 gsi_metguess_mod.o kinds.o 
 rdgrbsst.o : rdgrbsst.f90 constants.o kinds.o 
