Trunk: Merged ImproveObsOperator_ticket639_C branch at r91564 to the trunk.  This update brings in three changes:  * Current GSI forward model for surface observations can induce large representativeness error when surface conditions are inhomogeneous, such as on coastlines. An improved forward model for surface observations is developed in GSD to analyze the observations on coastlines with GSI.  * There are many high frequency observations used in RAP/HRRR, such as aircraft and surface observations. GSI inflates the observation error for duplicated observations from the same station. Another option is added for duplicated observations to use one that is closer to the analysis time only.  * Several bugs were found and fixed in GSI T&E for RAP/HRRR application and from community GSI support and DTC T&E.
For more details, please see ticket #639.


git-svn-id: https://svnemc.ncep.noaa.gov/projects/gsi/trunk/src@91786 281fb692-3a18-0410-826d-9e847983f365

--- a/Makefile.dependency
+++ b/Makefile.dependency
@@ -488,7 +488,7 @@ tcv_mod.o : tcv_mod.f90 constants.o kinds.o
 tendsmod.o : tendsmod.f90 mpeu_util.o gsi_chemguess_mod.o gsi_metguess_mod.o gsi_bundlemod.o mpimod.o gridmod.o constants.o kinds.o 
 test_obsens.o : test_obsens.f90 control_vectors.o obs_sensitivity.o mpimod.o obsmod.o jfunc.o constants.o kinds.o 
 timermod.o : timermod.f90 kinds.o 
-tintrp2a.o : tintrp2a.f90 constants.o gridmod.o kinds.o 
+tintrp2a.o : tintrp2a.f90 guess_grids.o constants.o gridmod.o kinds.o 
 tintrp3.o : tintrp3.f90 constants.o gridmod.o kinds.o 
 tpause.o : tpause.f90 gsi_metguess_mod.o gsi_bundlemod.o gridmod.o guess_grids.o constants.o kinds.o 
 tpause_t.o : tpause_t.F90 constants.o kinds.o 
