--- a/Makefile.src
+++ b/Makefile.src
@@ -39,6 +39,19 @@
 	calctends_no_ad.o \
 	calctends_no_tl.o \
 	chemmod.o \
+        class_get_pseudo_ensperts.o \
+        class_get_wrf_mass_ensperts.o  \
+        class_get_wrf_nmm_ensperts.o  \
+        class_gfs_ensmod.o  \
+        class_read_wrf_mass_files.o  \
+        class_read_wrf_mass_guess.o  \
+        class_read_wrf_nmm_files.o  \
+        class_read_wrf_nmm_guess.o  \
+        class_regional_io.o  \
+        class_wrf_binary_interface.o  \
+        class_wrf_netcdf_interface.o  \
+        class_wrwrfmassa.o  \
+        class_wrwrfnmma.o  \
 	clw_mod.o \
 	cloud_efr_mod.o \
 	cmaq_routines.o \
@@ -69,6 +82,20 @@
 	convthin.o \
 	convthin_time.o  \
         correlated_obsmod.o \
+        cplr_get_pseudo_ensperts.o  \
+        cplr_get_wrf_mass_ensperts.o  \
+        cplr_get_wrf_nmm_ensperts.o  \
+        cplr_gfs_ensmod.o  \
+        cplr_gfs_nstmod.o  \
+        cplr_read_wrf_mass_files.o  \
+        cplr_read_wrf_mass_guess.o  \
+        cplr_read_wrf_nmm_files.o  \
+        cplr_read_wrf_nmm_guess.o  \
+        cplr_regional_io.o  \
+        cplr_wrf_binary_interface.o  \
+        cplr_wrf_netcdf_interface.o  \
+        cplr_wrwrfmassa.o  \
+        cplr_wrwrfnmma.o  \
 	crtm_interface.o \
 	cwhydromod.o \
 	cvsection.o \
@@ -108,13 +135,10 @@
 	get_gefs_ensperts_dualres.o \
 	get_gefs_for_regional.o \
 	get_nmmb_ensperts.o \
-	get_pseudo_ensperts.o \
 	get_semimp_mats.o \
-	get_wrf_nmm_ensperts.o \
 	getcount_bufr.o  \
 	getprs.o \
 	getsiga.o \
-	get_wrf_mass_ensperts_netcdf.o \
 	getuv.o \
 	getvvel.o \
         gfs_stratosphere.o \
@@ -125,6 +149,7 @@
 	gscond_ad.o \
 	gsd_terrain_match_surfTobs.o \
 	gsdcloudanalysis.o \
+        gsdcloudanalysis4gfs.o \
         gsdcloudanalysis4NMMB.o \
         gsd_update_mod.o \
 	gsi_4dvar.o \
@@ -273,6 +298,7 @@
 	ncepgfs_ghg.o \
 	ncepgfs_io.o \
 	ncepnems_io.o \
+        netcdf_mod.o \
 	nlmsas_ad.o \
 	normal_rh_to_q.o \
 	nstio_module.o \
@@ -360,11 +386,6 @@
 	read_ssmis.o \
 	read_superwinds.o \
 	read_tcps.o \
-	read_wrf_mass_files.o \
-	read_wrf_mass_guess.o \
-	read_wrf_nmm_files.o \
-	read_wrf_nmm_guess.o \
-	regional_io.o \
 	reorg_metar_cloud.o \
 	rfdpar.o \
 	rsearch.o \
@@ -464,13 +485,12 @@
 	strong_bal_correction.o \
 	strong_baldiag_inc.o \
 	strong_fast_global_mod.o \
+        stub_ensmod.o  \
+        stub_pertmod.o  \
+        stub_set_crtm_aerosol.o  \
+        stub_timermod.o  \
 	sub2fslab_mod.o \
 	support_2dvar.o \
-	stub_ensmod.o \
-	stub_nstmod.o \
-	stub_set_crtm_aerosol.o \
-	stub_pertmod.o \
-        stub_timermod.o \
 	tendsmod.o \
 	test_obsens.o \
 	tcv_mod.o \
@@ -491,13 +511,10 @@
 	update_guess.o \
 	update_geswtend.o \
 	wind_fft.o \
-	wrf_binary_interface.o \
 	wrf_mass_guess_mod.o \
-	wrf_netcdf_interface.o \
+        wrf_params_mod.o \
 	write_all.o \
 	write_bkgvars_grid.o \
-	wrwrfmassa.o \
-	wrwrfnmma.o \
 	xhat_vordivmod.o \
 	zrnmi_mod.o
 
