Trunk: Merged tic608_nsst_rt branch at r96747 to the trunk. This update brings in several fixes from multiple tickets:  * Ticket #608 -    * Set up a new GSI regression test to have NSST included.    * Additional bug fixes related to NSST, GMI data, and to allow the code to compile and run using Intel 15+ compilers are also included with this ticket.  * Ticket #631 -    * A bug was discovered which causes the GSI to crash during the GFS anal cycle (but not during GDAS anal) when using correlated observations. Work on this ticket will fix this problem.  * Ticket #655 -    * Our local tests at GMAO have detected a code bug in (polymorphic) prad_bias.f90, in the trunk since r89611.    * This bug skips the whole linked-list of pass radiances observations in subroutine prad_bias(), within the loop ! Big loop for observations   do ibin=1,nobs_bins      !radptrm => obsLList_headNode(radheadm(ibin))      radptrm => radNode_typecast(obsLList_headNode(radheadm(ibin)))      do while (associated(radptrm))    * where the single statement      radptrm => radNode_typecast(obsLList_headNode(radheadm(ibin)))    * would return a null pointer, therefore skip the whole loop over radheadm(ibin) all together, without actually compute the coefficients.  * Bug #35462 -    * John Derber found a bug in the radiance_obstype_search subroutine, where there were some of the input obstypes (e.g., hirs4, sndrd*) that are not found (It is trying to match hirs4 to hirs and sndrd to sndr). This ticket is to fix this bug.  * Bug #36077 -    * Bug were found in atms_spatial_average_mod.f90. The bugs were not noticed just because the index happened to be correct in the way the channels were chosen in atms_beamwidth.txt. Errors will appear in tests where any of the channel numbers are commented out in atms_beamwidth.txt. The fix will make the spatial averaging file work for any channel or any combinations of the channels.  * Ticket #658 -    * Corrected an initialization issue in read_airs, read_cris, an

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
+# need to set CMP0046 when using add_dependencies with cmake version 3.6.2
+  if(crayComp)
+    cmake_policy(SET CMP0046 NEW)
+  endif()
   set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 # get a list of all the fortran source files
   file(GLOB GSI_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*90 )
@@ -46,6 +50,9 @@ cmake_minimum_required(VERSION 2.8)
   list( REMOVE_ITEM GSI_SRC ${LINKED_SRC} )
   list( REMOVE_ITEM GSI_SRC ${STUB_SRC} )
   list( REMOVE_ITEM GSI_SRC ${CPLR_SRC} )
+
+# remove stub_nstmod from the rest of the source files
+  list( REMOVE_ITEM GSI_SRC "${CMAKE_CURRENT_SOURCE_DIR}/stub_nstmod.f90" )
 
 # The specific regional/WRF source files
   if(USE_WRF)
@@ -95,7 +102,7 @@ cmake_minimum_required(VERSION 2.8)
 
   if(BUILD_CORELIBS )
     if(USE_WRF) 
-      add_dependencies(gsilib_wrf${debug_suffix} MODS gsilib_shrd${debug_suffix} ${bacio} ${crtm} ${bufr} ${nemsio} ${sigio} ${sfcio} ${sp} ${w3emc} ${w3nco} )
+      add_dependencies(gsilib_wrf${debug_suffix} gsilib_shrd${debug_suffix} ${bacio} ${crtm} ${bufr} ${nemsio} ${sigio} ${sfcio} ${sp} ${w3emc} ${w3nco} )
     endif()
     if(BUILD_GLOBAL)
 #     add_library(gsilib_global${debug_suffix} STATIC ${GLOBAL_SRC} )
@@ -105,7 +112,7 @@ cmake_minimum_required(VERSION 2.8)
   endif()
 
   if(USE_WRF) 
-    add_dependencies(gsilib_wrf${debug_suffix} MODS gsilib_shrd${debug_suffix} )
+    add_dependencies(gsilib_wrf${debug_suffix} gsilib_shrd${debug_suffix} )
     add_executable(gsi.x${debug_suffix} ${CMAKE_CURRENT_SOURCE_DIR}/gsimain.f90 ${CMAKE_CURRENT_SOURCE_DIR}/gsimod.F90 )
   endif()
 
