--- a/Makefile.conf.cray
+++ b/Makefile.conf.cray
@@ -98,12 +98,12 @@ LIBhdf    = #-L$(BASEDIR)/$(ARCH)/lib  -lmfhdf -ldf -lhdfjpeg -lhdfz -lsz
   		-I $(NEMSIO_INC) -I $(NETCDF_INCLUDE) -I $(W3EMC_INCd) \
   		-O0 -fp-model strict -convert big_endian -assume byterecl \
 		-implicitnone -g -traceback -debug \
-                -ftrapuv -check all  -fp-stack-check  -fstack-protector -warn
+                -ftrapuv -check all,noarg_temp_created  -fp-stack-check  -fstack-protector -warn
   FFLAGS_COM_NOSWAP_D  =  -I ./ -I $(CRTM_INC) -I $(SFCIO_INC4) -I $(SIGIO_INC4) \
   		       -I $(NEMSIO_INC) -I $(NETCDF_INCLUDE) -I $(W3EMC_INCd) \
   		       -O0 -fp-model strict -convert big_endian -assume byterecl \
 		       -implicitnone -g -traceback -debug \
-                       -ftrapuv -check all  -fp-stack-check  -fstack-protector -warn
+                       -ftrapuv -check all,noarg_temp_created  -fp-stack-check  -fstack-protector -warn
   FFLAGS_D  = $(FFLAGS_F90) $(FFLAGS_COM_D)
   FFLAGS_NOSWAP_D = $(FFLAGS_F90) $(FFLAGS_COM_NOSWAP_D)
 
