--- a/Makefile.conf.wcoss
+++ b/Makefile.conf.wcoss
@@ -40,6 +40,7 @@ NETCDF_INCLUDE = ${NETCDF}/include
 NETCDF_LDFLAGS_F = -L${NETCDF}/lib -lnetcdf
 
 
+
 # WRF locations
 WRFPATH = /nwprod/sorc/wrf_shared.fd
 LIBwrfio_int    = $(WRFPATH)/external/io_int/libwrfio_int.a
@@ -79,12 +80,12 @@ LIBhdf    = #-L$(BASEDIR)/$(ARCH)/lib  -lmfhdf -ldf -lhdfjpeg -lhdfz -lsz
   FFLAGS_COM_N  = -I ./ -I $(CRTM_INC) -I $(SFCIO_INC4) -I $(SIGIO_INC4) \
   		-I $(NEMSIO_INC) -I $(NETCDF_INCLUDE) -I $(W3EMC_INCd) \
                 -O3 -fp-model source -convert big_endian -assume byterecl \
-                -implicitnone $(OMP)
+                -implicitnone -g -traceback $(OMP)
 
   FFLAGS_COM_N_NOSWAP  = -I ./ -I $(CRTM_INC) -I $(SFCIO_INC4) -I $(SIGIO_INC4) \
   		       -I $(NEMSIO_INC) -I $(NETCDF_INCLUDE) -I $(W3EMC_INCd) \
                        -O3 -fp-model source -convert big_endian -assume byterecl \
-                       -implicitnone $(OMP)
+                       -implicitnone -g -traceback $(OMP)
 
   FFLAGS_N  = $(FFLAGS_F90) $(FFLAGS_COM_N) $(PROF) 
   FFLAGS_NOSWAP_N  = $(FFLAGS_F90) $(FFLAGS_COM_N_NOSWAP) $(PROF) 
@@ -97,12 +98,12 @@ LIBhdf    = #-L$(BASEDIR)/$(ARCH)/lib  -lmfhdf -ldf -lhdfjpeg -lhdfz -lsz
   		-I $(NEMSIO_INC) -I $(NETCDF_INCLUDE) -I $(W3EMC_INCd) \
   		-O0 -fp-model source -convert big_endian -assume byterecl \
 		-implicitnone -mcmodel medium -shared-intel -g -traceback -debug \
-                -ftrapuv -check all  -fp-stack-check  -fstack-protector -warn
+                -ftrapuv -check all,noarg_temp_created  -fp-stack-check  -fstack-protector -warn
   FFLAGS_COM_NOSWAP_D  =  -I ./ -I $(CRTM_INC) -I $(SFCIO_INC4) -I $(SIGIO_INC4) \
   		       -I $(NEMSIO_INC) -I $(NETCDF_INCLUDE) -I $(W3EMC_INCd) \
   		       -O0 -fp-model source -convert big_endian -assume byterecl \
 		       -implicitnone -mcmodel medium -shared-intel -g -traceback -debug \
-                       -ftrapuv -check all  -fp-stack-check  -fstack-protector -warn
+                       -ftrapuv -check all,noarg_temp_created  -fp-stack-check  -fstack-protector -warn
   FFLAGS_D  = $(FFLAGS_F90) $(FFLAGS_COM_D)
   FFLAGS_NOSWAP_D = $(FFLAGS_F90) $(FFLAGS_COM_NOSWAP_D)
 
