--- a/enkf/Makefile.conf.cray
+++ b/enkf/Makefile.conf.cray
@@ -99,11 +99,11 @@ LIBhdf    = #-L$(BASEDIR)/$(ARCH)/lib  -lmfhdf -ldf -lhdfjpeg -lhdfz -lsz
   FFLAGS_COM_D  =  -I ./ -I ../ -I $(SFCIO_INC4) -I $(SIGIO_INC4) -I $(NEMSIO_INC) \
   		-I $(NETCDF_INCLUDE) \
 		-O0 -fp-model source -convert big_endian -assume byterecl \
-		-implicitnone -warn all -g -traceback -debug all -check all
+		-implicitnone -warn all -g -traceback -debug all -check all,noarg_temp_created
   FFLAGS_COM_NOSWAP_D  =  -I ./ -I ../ -I $(SFCIO_INC4) -I $(SIGIO_INC4) -I $(NEMSIO_INC) \
   		       -I $(NETCDF_INCLUDE) \
   		       -O0 -fp-model source -convert big_endian -assume byterecl \
-		       -implicitnone -warn all -g -traceback -debug all -check all
+		       -implicitnone -warn all -g -traceback -debug all -check all,noarg_temp_created
   FFLAGS_D  = $(FFLAGS_F90) $(FFLAGS_COM_D)
   FFLAGS_NOSWAP_D = $(FFLAGS_F90) $(FFLAGS_COM_NOSWAP_D)
 
